--- a/src/styles/tabs/chooseIns.css
+++ b/src/styles/tabs/chooseIns.css
@@ -38,7 +38,7 @@
     padding: 5px 40px 5px 10px;
 }
 #bass:checked + label::after{
-    content: url('../../../assets/icons/guitar-bass-head.svg');
+    content: url('../../assets/icons/guitar-bass-head.svg');
     display: block;
     width: 20px;
     height: 20px;
@@ -48,7 +48,7 @@
     top: 7px;
 }
 #guitar:checked + label::after{
-    content: url('../../../assets/icons/guitar-head.svg');
+    content: url('../../assets/icons/guitar-head.svg');
     display: block;
     width: 20px;
     height: 20px;
